# pgaf

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
crates/pgaf_cli/: Cargo.toml
crates/pgaf_cli/src/: lib.rs  main.rs  shared.rs  stdlib.rs  trace.rs  workdir.rs
crates/pgaf_cli/src/config/: deserialize.rs  mod.rs  runs.rs  validate.rs
crates/pgaf_cli/src/functions/: mod.rs
crates/pgaf_cli/src/processing/: mod.rs  template.rs
crates/pgaf_cli/src/processing/context/: expr.rs  gen.rs  generator.rs  mod.rs  value.rs
crates/pgaf_cli/src/processing/pipeline/: mod.rs  sync.rs  threaded.rs
crates/pgaf_cli/src/processing/processor/: mod.rs  unbatched.rs
crates/pgaf_cli/src/registry/: itself.rs  serialize.rs
crates/pgaf_cli/src/sites/: config.rs  drivers.rs  mod.rs
crates/pgaf_engine/: Cargo.toml
crates/pgaf_engine/src/: lib.rs
crates/pgaf_engine/src/context/: expr.rs  generator.rs  mod.rs  value.rs
crates/pgaf_engine/src/pipeline/: mod.rs  sync.rs  threaded.rs
crates/pgaf_engine/src/processor/: builder.rs  mod.rs  serializer.rs  unbatched.rs
crates/pgaf_sdk/: Cargo.toml
crates/pgaf_sdk/src/: data.rs  domain.rs  lib.rs  sink.rs  site.rs
crates/pgaf_sdk/src/config/: mod.rs  validate.rs
crates/pgaf_sdk/src/context/: mod.rs  value.rs
crates/pgaf_sdk/src/function/: deserializer.rs  mod.rs
crates/pgaf_sdk/src/pipeline/: deserializer.rs  mod.rs
crates/pgaf_sdk/src/registry/: identifier.rs  mod.rs  namespace.rs  resources.rs  serialize.rs
crates/pgaf_std/: Cargo.toml
crates/pgaf_std/src/: lib.rs
crates/pgaf_std/src/domain/: mod.rs  raster.rs  rect.rs  vector.rs
crates/pgaf_std/src/function/: dbgfib.rs  greet.rs  mod.rs
crates/pgaf_std/src/pipeline/: cmd.rs  display.rs  filter.rs  map.rs  mod.rs  template.rs  unset.rs  void.rs
crates/pgaf_std/src/site/: mod.rs  raster.rs  vector.rs
src/: main.rs
src/config/: mod.rs  runs.rs  sites.rs
src/functions/: deserializer.rs  mod.rs
src/functions/functions/: greet.rs
src/processing/: mod.rs
src/processing/context/: eval.pest  eval.rs  expr.pest  expr.rs  mod.rs  value.rs
src/processing/pipeline/: mod.rs  threaded.rs
src/registry/: identifier.rs  itself.rs  mod.rs  resources.rs
src/sites/: drivers.rs
