[package]
name = "pythia-rs"
version = "0.1.0"
edition = "2021"

[features]
gdal = ["dep:gdal"]

[dependencies]
gdal = { version = "0.19", optional = true }
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0"
regex = "1.11.1"
num_cpus = "1.16.0"
tempfile = "3.17.1"
tera = { version = "1.20.0", default-features = false }
thiserror = "2.0.12"
pest = "2.8.6"
pest_derive = "2.8.6"
