[workspace]
resolver = "3"
members = [
  "crates/pgaf_cli",
  "crates/pgaf_engine",
  "crates/pgaf_sdk",
  "crates/pgaf_std",
]

[workspace.package]
authors = ["Nathan P. Bombana <nathan.pbombana@gmail.com>"]
description = "Parallel Geospatial Analysis Framework — Work-In-Progress lightweight tool for mass-parallel geospatial analysis."
repository = "https://github.com/NathanPB/pgaf"
license = "Apache-2.0"
