[workspace]
resolver = "3"
members = [
  "crates/pgaf_cli",
  "crates/pgaf_engine",
  "crates/pgaf_sdk",
  "crates/pgaf_std",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nathan P. Bombana <nathan.pbombana@gmail.com>"]
description = "Parallel Geospatial Analysis Framework — Work-In-Progress lightweight tool for mass-parallel geospatial analysis."
repository = "https://github.com/NathanPB/pgaf"
license = "Apache-2.0"

[workspace.dependencies]
pgaf_engine = { path = "crates/pgaf_engine", version = "0.1.0" }
pgaf_sdk = { path = "crates/pgaf_sdk", version = "0.1.0" }
pgaf_std = { path = "crates/pgaf_std", version = "0.1.0" }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
