[package]
name = "pgaf"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
pgaf_engine = { workspace = true }
pgaf_sdk = { workspace = true }
pgaf_std = { workspace = true }
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0"
serde-inline-default = "1"
regex = "1"
tempfile = "3.17.1"
thiserror = "2.0.12"
