[package]
name = "pgaf"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
pgaf_engine = { workspace = true }
pgaf_sdk = { workspace = true }
pgaf_std = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-inline-default = "1"
serde-saphyr = { version = "0.0.29", default-features = false, features = [
  "deserialize",
] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1"
thiserror = "2"
