[package]
name = "pgaf_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pgaf_sdk = { workspace = true }
serde = { version = "1", features = ["derive"] }
num_cpus = "1"
thiserror = "2"
pest = "2"
pest_derive = "2"

[dev-dependencies]
serde_json = "1"
