[package]
name = "pgaf_sdk"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-inline-default = "1"
validator = { version = "0.20.0", features = ["derive"] }
tera = { version = "1.20.0", default-features = false }
thiserror = "2"
regex = "1"
