[package]
name = "pgaf_sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = { version = "1.20.0", default-features = false }
thiserror = "2"
regex = "1"
