[package]
name = "pgaf_std"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]
gdal = ["dep:gdal"]

[dependencies]
pgaf_sdk = { workspace = true }
tracing = { workspace = true }
gdal = { version = "0.19.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "2"
tera = { version = "2", default-features = false }
validator = { version = "0.20.0", features = ["derive"] }
